# ChangeLog for media-gfx/gimp
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.197 2007/05/06 16:50:48 hanno Exp $

  06 May 2007; Hanno Boeck <hanno@gentoo.org> gimp-2.2.14.ebuild,
  gimp-2.3.16.ebuild, gimp-9999.ebuild:
  Add python_mod_optimize/cleanup.

  06 May 2007; Roy Marples <uberlord@gentoo.org> gimp-2.3.16.ebuild:
  Added ~x86-fbsd keyword.

  03 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> gimp-2.2.14.ebuild:
  ppc stable, bug #176226

  02 May 2007; Daniel Gryniewicz <dang@gentoo.org> gimp-2.2.14.ebuild:
  Marked stable on amd64 for bug #176226

  02 May 2007; Jose Luis Rivero <yoswink@gentoo.org> gimp-2.2.14.ebuild:
  Stable on alpha wrt security bug #176226

  01 May 2007; Markus Rothe <corsair@gentoo.org> gimp-2.2.14.ebuild:
  Stable on ppc64; bug #176226

  30 Apr 2007; Marius Mauch <genone@gentoo.org> gimp-2.2.12.ebuild,
  gimp-2.2.14.ebuild, gimp-2.3.15.ebuild, gimp-2.3.16.ebuild,
  gimp-9999.ebuild:
  Replacing einfo with elog

  30 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> gimp-2.2.14.ebuild:
  Stable on sparc wrt security #176226

  28 Apr 2007; Hanno Boeck <hanno@gentoo.org> gimp-2.3.16.ebuild,
  gimp-9999.ebuild:
  Raise some dependencies, mask in all 2.4 profiles and remove mips keyword.

  28 Apr 2007; Raúl Porcel <armin76@gentoo.org> gimp-2.2.14.ebuild:
  ia64 + x86 wrt security bug 176226

*gimp-2.3.16 (28 Apr 2007)
*gimp-2.2.14 (28 Apr 2007)

  28 Apr 2007; Hanno Boeck <hanno@gentoo.org> -files/gimp.desktop,
  +files/gimp-sunras-bufferoverflow.diff, +gimp-2.2.14.ebuild,
  +gimp-2.3.16.ebuild, gimp-9999.ebuild:
  Bump with security fix for sunras plugin.

  21 Apr 2007; Hanno Boeck <hanno@gentoo.org> gimp-9999.ebuild:
  Change live ebuild from cvs to svn.

*gimp-2.3.15 (02 Apr 2007)

  02 Apr 2007; Hanno Boeck <hanno@gentoo.org> +gimp-2.3.15.ebuild:
  Version bump.

  16 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> metadata.xml: