@@ -1,5 +1,5 @@
 DIST gimp-2.3.15.tar.bz2 16080133 RMD160 8c2017dccf188fe2b76e8a15acdc91c338c3457a SHA1 7447afd00d2940e2dd02edfc92575715d3a52936 SHA256 419f42a6e9b305a6b7870771ef072e64265f9332f8dcfa341ba14f5216aa0ac7
 EBUILD gimp-2.3.15.ebuild 3079 RMD160 4d0aed9bb8174b7dc2d40d937909630fe5fcfc61 SHA1 dbda292fb2e86dc8e9aa0e659f481855f81d8741 SHA256 2640194b7151e3b605cbdf7ca449d0da5b3d2a16495cb5f70648adc357ddc222
-EBUILD gimp-9999.ebuild 3489 RMD160 90e1e6d602c329f49059a7b94fffb558db116c67 SHA1 e8d23409e09d13fb8c3c47dea636b271b6374d0d SHA256 1d7fc0763f1d198263288859082737ebb7b83e9471aaa160188f59bf6b02c650
-MISC ChangeLog 28038 RMD160 c48ed0c48a1e2604eae505eb92daf3fe89634cd6 SHA1 4039a872f32389cc6ae1f5d77220224229f22b16 SHA256 0337f9d22e086877c5b3bfbe7020465db360755f42898c5631c076ae9bacfbd7
+EBUILD gimp-9999.ebuild 3560 RMD160 770c40549d0651cdfedf4cdb8f435dba18dfdc3b SHA1 f0788a52dd1074385f14dbfe50751cf8392b420d SHA256 4c3476d2a7b1ad154f7191f04ba9f89c57fbc3bacaf294c7f2bc029b7cece9bc
+MISC ChangeLog 28485 RMD160 1603f27855206a0183e22066a09713b2ff0e34dd SHA1 6f48067df180fead6e8871e1be2720b0a6ec1787 SHA256 7b8f4e88e70f912646c333f7167dd8c9e54a16c0573152e2e2efc8d02384f7ed
 MISC metadata.xml 220 RMD160 a49072631c03f8ac3685b12169abeef3b34ad3d6 SHA1 9614887db749b0a3c17016da5b3ec0e42b908ad3 SHA256 c893488c84e6da8039f2b473982f03e934ec12f8fe2c1ace770f9e34969db081
