@@ -1,6 +1,16 @@
 # ChangeLog for media-gfx/gimp
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.197 2007/05/06 16:50:48 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.200 2007/05/11 02:07:06 kumba Exp $
+
+  11 May 2007; Joshua Kinard <kumba@gentoo.org> gimp-2.2.14.ebuild:
+  Stable on mips, per #176226.
+
+  09 May 2007; Hanno Boeck <hanno@gentoo.org> -gimp-2.2.12.ebuild,
+  -gimp-2.3.15.ebuild, gimp-2.3.16.ebuild, gimp-9999.ebuild:
+  Cleanup of vulnerable ebuilds, disable automagic detection for dbus.
+
+  08 May 2007; Jeroen Roovers <jer@gentoo.org> gimp-2.2.14.ebuild:
+  Stable for HPPA, despite that it does not run (bug #176226 and bug #168131).
 
   06 May 2007; Hanno Boeck <hanno@gentoo.org> gimp-2.2.14.ebuild,
   gimp-2.3.16.ebuild, gimp-9999.ebuild:
